--- a/java-sec/基础/研究/1.SpEL表达式支持${}语法吗.md
+++ b/java-sec/基础/研究/1.SpEL表达式支持${}语法吗.md
@@ -24,7 +24,7 @@ POST /$%7B44128%2A41838%7D/Login_userLogin.action HTTP/1.1
 
 OGNL语法支持 ${} ?
 
-# 查看文档
+### 查看文档
 
 https://docs.spring.io/spring-framework/docs/3.0.x/reference/expressions.html
 
@@ -32,7 +32,7 @@ https://docs.spring.io/spring-framework/docs/3.0.x/reference/expressions.html
 
 看样子是不支持 ${}
 
-# 代码测试
+### 代码测试
 
 ```
 package spel;
@@ -100,7 +100,7 @@ Exception in thread "main" org.springframework.expression.spel.SpelParseExceptio
 
 那为什么poc请求中都是 ${} 呢？
 
-# 定位原因: 那为什么poc请求中都是 ${} 呢？
+### 定位原因: 那为什么poc请求中都是 ${} 呢？
 
 [Spring Security OAuth2 远程命令执行漏洞(CVE-2016-4977)](https://blog.knownsec.com/2016/10/spring-security-oauth-rce/) 文章中分析了，OAuth2会将 ${} 花括号的内容取出来，然后当做表达式执行。
 
@@ -110,6 +110,6 @@ GET /$%7B43714%2A41441%7D/ HTTP/1.1
 
 这个可能是EL表达式注入而不是SpEL注入，或者是模板注入的探测。
 
-# 总结
+### 总结
 * SpEL不支持${}语法
 * 流量设备的告警名称不准确
