--- a/java/研究/1.javax.el如何自动找到实现类.md
+++ b/java/研究/1.javax.el如何自动找到实现类.md
@@ -1,5 +1,7 @@
 ### 背景
 
+在研究java的el时，测试代码有一行如下
+
 ```
 ExpressionFactory factory = ExpressionFactory.newInstance();
 ```
@@ -13,7 +15,7 @@ ExpressionFactory factory = ExpressionFactory.newInstance();
 </dependency>
 ```
 
-会报错说，找不到实现类
+运行时会报错说，找不到实现类，如下
 ```
 Exception in thread "main" javax.el.ELException: Provider com.sun.el.ExpressionFactoryImpl not found
 	at javax.el.FactoryFinder.newInstance(FactoryFinder.java:101)
