--- a/java-sec/基础/反序列化/1.readObject.md
+++ b/java-sec/基础/反序列化/1.readObject.md
@@ -1,4 +1,10 @@
-# 代码示例
+### 什么时候会产生漏洞？
+
+* 用户提供序列化对象
+* 应用程序没有校验就反序列化
+* 在程序classpath中存在有问题的库，可以被用来当做漏洞利用的跳板
+
+### 代码示例
 ```
 import java.io.*;
 
@@ -36,4 +42,10 @@ public class VulnerableClass implements Serializable {
 }
 ```
 
-# 哪些类可以被利用？
+# 哪些库的readObject可以作为漏洞利用时的跳板？
+
+参考yso项目，至少有35个库
+
+# 那些库调用readObject来反序列化生成对象？
+
+* Apache OFBiz 的 SafeObjectInputStream类。参考 [Apache OFBiz RMI反序列化远程代码执行漏洞（CVE-2021-26295）](https://xz.aliyun.com/t/9345)
